# cream-cli

./: CMakeLists.txt
config/: CMakeLists.txt  glite_cream.conf.template
doc/: CMakeLists.txt  glite-ce-allowed-submission.xml  glite-ce-delegate-proxy.xml  glite-ce-disable-submission.xml  glite-ce-enable-submission.xml  glite-ce-get-cemon-url.xml  glite-ce-job-cancel.xml  glite-ce-job-lease.xml  glite-ce-job-list.xml  glite-ce-job-output.xml  glite-ce-job-purge.xml  glite-ce-job-resume.xml  glite-ce-job-status.xml  glite-ce-job-submit.xml  glite-ce-job-suspend.xml  glite-ce-proxy-renew.xml  glite-ce-service-info.xml
project/: glite-ce-cream-cli.spec.in
src/: CMakeLists.txt  common_checks.h  conf_parser.h  glite-ce-allowed-submission.cpp  glite-ce-delegate-proxy.cpp  glite-ce-disable-submission.cpp  glite-ce-enable-submission.cpp  glite-ce-event-query.cpp  glite-ce-get-cemon-url.cpp  glite-ce-job-assess.cpp  glite-ce-job-cancel.cpp  glite-ce-job-lease.cpp  glite-ce-job-list.cpp  glite-ce-job-output.cpp  glite-ce-job-purge.cpp  glite-ce-job-resume.cpp  glite-ce-job-signal.cpp  glite-ce-job-status.cpp  glite-ce-job-submit.cpp  glite-ce-job-suspend.cpp  glite-ce-proxy-renew.cpp  glite-ce-service-info.cpp  glite-es-activity-cancel.cpp  glite-es-activity-create.cpp  glite-es-activity-info.cpp  glite-es-activity-list.cpp  glite-es-activity-pause.cpp  glite-es-activity-restart.cpp  glite-es-activity-resume.cpp  glite-es-activity-status.cpp  glite-es-activity-wipe.cpp  glite-es-delegate-proxy.cpp  glite-es-delegation-info.cpp  glite-es-delegation-renew.cpp  glite-es-get-resourceinfo.cpp  glite-es-notify-service.cpp  glite-es-query-resourceinfo.cpp  hmessages.h  hmessages_es.h  test_register.cpp  (+1 more)
src/ftpclient/: CMakeLists.txt  ftp_ex.h  gridftpClient.cpp  gridftpClient.h
src/services/: CMakeLists.txt  cli_service.cpp  cli_service.h  cli_service_allowed_submission.cpp  cli_service_allowed_submission.h  cli_service_common_options.h  cli_service_delegate_proxy.cpp  cli_service_delegate_proxy.h  cli_service_disable_submission.cpp  cli_service_disable_submission.h  cli_service_enable_submission.cpp  cli_service_enable_submission.h  cli_service_esjobsubmit.cpp  cli_service_esjobsubmit.h  cli_service_event_query.cpp  cli_service_event_query.h  cli_service_get_cemon_url.cpp  cli_service_get_cemon_url.h  cli_service_jobcancel.cpp  cli_service_jobcancel.h  cli_service_joblease.cpp  cli_service_joblease.h  cli_service_joblist.cpp  cli_service_joblist.h  cli_service_jobpurge.cpp  cli_service_jobpurge.h  cli_service_jobresume.cpp  cli_service_jobresume.h  cli_service_jobstatus.cpp  cli_service_jobstatus.h  cli_service_jobsubmit.cpp  cli_service_jobsubmit.h  cli_service_jobsuspend.cpp  cli_service_jobsuspend.h  cli_service_proxy_renew.cpp  cli_service_proxy_renew.h  cli_service_service_info.cpp  cli_service_service_info.h
src/util/: CMakeLists.txt  JDLEx.h  JDLExceptions.h  cliUtils.cpp  cliUtils.h  internal_ex.h  jdlHelper.cpp  jdlHelper.h  no_user_confile_ex.h
